--- a/templates/trailer/details.html.twig
+++ b/templates/trailer/details.html.twig
@@ -1,10 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>{{ trailer.brand }} - {{ trailer.model }}</h1>
-    <p>Load Capacity Kg: {{ trailer.loadKapacityKg }} KG</p>
-    <p>Axles Number: {{ trailer.axlesNumber }}</p>
-    <p>Price: ${{ trailer.price }}</p>
-    <p>Quantity: {{ trailer.quantity }}</p>
+{% block title %}{{ trailer.brand }} - {{ trailer.model }}{% endblock %}
 
+{% block body %}
+<div class="my-4 px-8">
+    <a class="bg-white hover:bg-gray-200 rounded-xl p-2 text-black" href="/">
+        <svg class="inline text-black" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512">
+            <path fill="#000" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/>
+        </svg>
+        Back
+    </a>
+</div>
+<div class="md:flex justify-center space-x-3 mt-5 px-4 lg:px-8">
+    <div class="flex justify-center">
+        <img class="max-h-[300px] md:max-h-[500px]" src="{{ asset('images/trailer.png') }}" alt="trailer image">
+    </div>
+    <div class="space-y-5">
+        <div class="mt-8 max-w-xl mx-auto">
+            <div class="px-8 pt-8">
+                <h1 class="text-[32px] font-semibold border-b border-white/10 pb-5 mb-5">
+                    {{ trailer.brand }} - {{ trailer.model }}
+                </h1>
+                
+                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Load Capacity</h4>
+                <p class="text-[22px] font-semibold">{{ trailer.loadKapacityKg }} KG</p>
+
+                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Axles Number</h4>
+                <p class="text-[22px] font-semibold">{{ trailer.axlesNumber }}</p>
+
+                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Price</h4>
+                <p class="text-[22px] font-semibold">${{ trailer.price }}</p>
+
+                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Quantity</h4>
+                <p class="text-[22px] font-semibold">{{ trailer.quantity }}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
