--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Vechicle Shop{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
         {% endblock %}
@@ -19,17 +19,20 @@
                         <img class="h-[42px]" src="{{ asset('images/carshop-logo.png') }}" alt="carshop logo">
                     </a>
                     <nav class="flex space-x-4 font-semibold">
-                        <a class="hover:text-amber-400 pt-2" href="/">
-                            Home
+                        <a class="hover:text-amber-400 pt-2" href="/cars">
+                            Cars
                         </a>
-                        <a class="hover:text-amber-400  pt-2" href="#">
-                            About
+                        <a class="hover:text-amber-400  pt-2" href="/motorcycles">
+                            Motorcycles
                         </a>
-                        <a class="hover:text-amber-400 pt-2" href="#">
-                            Contact
+                        <a class="hover:text-amber-400 pt-2" href="/trucks">
+                           Trucks
+                        </a>
+                        <a class="hover:text-amber-400 pt-2" href="/trailers">
+                           Trailers
                         </a>
                         <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="#">
-                            Get Started
+                           Login
                         </a>
                     </nav>
                 </header>
