--- a/templates/trailer/list.html.twig
+++ b/templates/trailer/list.html.twig
@@ -1,14 +1,54 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Trailers: Beam up some parts!{% endblock %}
+
 {% block body %}
-    <h1>Trailer List</h1>
-    <ul>
-        {% for trailer in trailers %}
-            <li>
-                <a href="{{ path('trailer_details', { id: trailer.id }) }}">
-                    {{ trailer.brand }} - {{ trailer.model }}
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
+<main class="flex flex-col lg:flex-row">
+
+    <div class="px-12 pt-10 w-full">
+        <h1 class="text-4xl font-semibold mb-8">
+            Trailers List
+        </h1>
+
+        <div class="space-y-5">
+            {% for trailer in trailers %}
+                <div class="bg-[#16202A] rounded-2xl pl-5 py-5 pr-11 flex flex-col min-[1174px]:flex-row min-[1174px]:justify-between">
+                    <div class="flex justify-center min-[1174px]:justify-start">
+                        <div class="ml-5">
+                            <h4 class="text-[22px] pt-1 font-semibold">
+                                <a
+                                    class="hover:text-slate-200"
+                                    href="{{ path('trailer_details', { id: trailer.id }) }}"
+                                >
+                                    {{ trailer.brand }} - {{ trailer.model }}
+                                </a>
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="flex justify-center min-[1174px]:justify-start mt-2 min-[1174px]:mt-0 shrink-0">
+                        <div class="border-r border-white/20 pr-8">
+                            <p class="text-slate-400 text-xs">Load Capacity</p>
+                            <p class="text-xl">{{ trailer.loadKapacityKg }} KG</p>
+                        </div>
+
+                        <div class="pl-8 w-[100px]">
+                            <p class="text-slate-400 text-xs">Axles Number</p>
+                            <p class="text-xl">{{ trailer.axlesNumber }}</p>
+                        </div>
+
+                        <div class="pl-8 w-[200px]">
+                            <p class="text-slate-400 text-xs">Price</p>
+                            <p class="text-xl">${{ trailer.price }}</p>
+                        </div>
+
+                        <div class="pl-8 w-[100px]">
+                            <p class="text-slate-400 text-xs">Quantity</p>
+                            <p class="text-xl">{{ trailer.quantity }}</p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</main>
 {% endblock %}
