--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                         <a class="hover:text-amber-400 pt-2" href="/trailers">
                            Trailers
                         </a>
-                        <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="#">
+                        <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="{{ path('app_login') }}">
                            Login
                         </a>
                     </nav>
