--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Vechicle Shop{% endblock %}</title>
+        <title>{% block title %}Vehicle Shop{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+        {% block stylesheets %}{% endblock %}
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
@@ -22,18 +21,29 @@
                         <a class="hover:text-amber-400 pt-2" href="/cars">
                             Cars
                         </a>
-                        <a class="hover:text-amber-400  pt-2" href="/motorcycles">
+                        <a class="hover:text-amber-400 pt-2" href="/motorcycles">
                             Motorcycles
                         </a>
                         <a class="hover:text-amber-400 pt-2" href="/trucks">
-                           Trucks
+                            Trucks
                         </a>
                         <a class="hover:text-amber-400 pt-2" href="/trailers">
-                           Trailers
+                            Trailers
                         </a>
-                        <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="{{ path('app_login') }}">
-                           Login
-                        </a>
+
+                        {% if app.user %}
+                            <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="{{ path('app_logout') }}">
+                                Logout
+                            </a>
+                            <div class="border-l border-white/2 pl-2 py-2 px-5" >
+                                <span >Welcome, {{ app.user.firstName }}</span>
+                            </div>
+                        {% else %}
+                            <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="{{ path('app_login') }}">
+                                Login
+                            </a>
+                        {% endif %}
+                        </div>
                     </nav>
                 </header>
                 {% block body %}{% endblock %}
