--- a/templates/car/list.html.twig
+++ b/templates/car/list.html.twig
@@ -6,12 +6,17 @@
 <main class="flex flex-col lg:flex-row">
 
     <div class="px-12 pt-10 w-full">
-        <h1 class="text-4xl font-semibold mb-8">
-            Cars List
-        </h1>            
-            <a href="{{ path('truck_create') }}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-                Add New Truck
+        <div class="flex justify-between items-center mb-8">
+            <h1 class="text-4xl font-semibold text-white">
+                Cars List
+            </h1>            
+            <a 
+                href="{{ path('car_create') }}" 
+                class="inline-block bg-amber-400 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-50"
+            >
+                Add New Car
             </a>
+        </div>
         <div class="space-y-5">
             {% for car in cars %}
                 <div class="bg-[#16202A] rounded-2xl pl-5 py-5 pr-11 flex flex-col min-[1174px]:flex-row min-[1174px]:justify-between">
