--- a/templates/trailer/list.html.twig
+++ b/templates/trailer/list.html.twig
@@ -6,9 +6,17 @@
 <main class="flex flex-col lg:flex-row">
 
     <div class="px-12 pt-10 w-full">
-        <h1 class="text-4xl font-semibold mb-8">
-            Trailers List
-        </h1>
+        <div class="flex justify-between items-center mb-8">
+            <h1 class="text-4xl font-semibold text-white">
+                Trailers List
+            </h1>            
+            <a 
+                href="{{ path('trailers_create') }}" 
+                class="inline-block bg-amber-400 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-50"
+            >
+                Add New Trailers
+            </a>
+        </div>
 
         <div class="space-y-5">
             {% for trailer in trailers %}
