--- a/templates/car/details.html.twig
+++ b/templates/car/details.html.twig
@@ -13,7 +13,7 @@
 </div>
 <div class="md:flex justify-center space-x-3 mt-5 px-4 lg:px-8">
     <div class="flex justify-center">
-        <img class="max-h-[300px] md:max-h-[500px]" src="{{ asset('images/car.png') }}" alt="car image">
+        <img class="h-[400px] w-[400px]" src="{{ asset('images/car.png') }}" alt="car image">
     </div>
     <div class="space-y-5">
         <div class="mt-8 max-w-xl mx-auto">
