--- a/templates/trailer/list.html.twig
+++ b/templates/trailer/list.html.twig
@@ -11,7 +11,7 @@
                 Trailers List
             </h1>            
             <a 
-                href="{{ path('trailers_create') }}" 
+                href="{{ path('trailer_create') }}" 
                 class="inline-block bg-amber-400 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-50"
             >
                 Add New Trailers
