--- a/templates/main/_sidebar.html.twig
+++ b/templates/main/_sidebar.html.twig
@@ -2,27 +2,61 @@
     class="pb-8 lg:pb-0 lg:w-[600px] shrink-0 lg:block lg:min-h-screen text-white transition-all overflow-hidden px-8 border-b lg:border-b-0 lg:border-r border-white/20 transition-all overflow-hidden"
 >
     <div class="flex justify-between mt-11 mb-7">
-        <h2 class="text-[32px] font-semibold">Favorites Status</h2>
+        <h2 class="text-[32px] font-semibold">Followed Vehicles</h2>
     </div>
 
     <div>
         <div class="flex flex-col space-y-1.5">
-            <div class="rounded-2xl py-1 px-3 flex justify-center w-32 items-center" style="background: rgba(255, 184, 0, .1);">
-                <div class="rounded-full h-2 w-2 bg-amber-400 blur-[1px] mr-2"></div>
+            <div class="rounded-2xl py-1 px-3 flex justify-center w-42 items-center" style="background: rgba(255, 184, 0, .1);">
+                <div class="rounded-full h-2 w-2 bg-rose-700 blur-[1px] mr-2"></div>
                 <p class="uppercase text-xs">Check Your Favs</p>
             </div>
-            <h3 class="tracking-tight text-[22px] font-semibold">
-                <a class="hover:underline" href="">jdhuh</a>
-            </h3>
         </div>
-        <div class="flex mt-4">
+        <div class="flex mt-4 border-b border-white/20 pb-8">
             <div class="border-r border-white/20 pr-8">
-                <p class="text-slate-400 text-xs">Captain</p>
+                <p class="text-slate-400 text-xs"></p>
+                <div class="flex justify-center">
+                    <img class="max-h-[50px] md:max-h-[50px]" src="{{ asset('images/follow-icon.png') }}" alt="trailer image">
+                </div>
+            </div>
+            <div class="pl-8">
+                <p class="text-slate-400 text-xs">Category</p>
                 <p class="text-xl">'dduifdifd'</p>
             </div>
-
             <div class="pl-8">
-                <p class="text-slate-400 text-xs">Class</p>
+                <p class="text-slate-400 text-xs">Brand</p>
+                <p class="text-xl">'dddd'</p>
+            </div>
+        </div>
+        <div class="flex mt-4 border-b border-white/20 pb-8">
+            <div class="border-r border-white/20 pr-8">
+                <p class="text-slate-400 text-xs"></p>
+                <div class="flex justify-center">
+                    <img class="max-h-[50px] md:max-h-[50px]" src="{{ asset('images/follow-icon.png') }}" alt="trailer image">
+                </div>
+            </div>
+            <div class="pl-8">
+                <p class="text-slate-400 text-xs">Category</p>
+                <p class="text-xl">'dduifdifd'</p>
+            </div>
+            <div class="pl-8">
+                <p class="text-slate-400 text-xs">Brand</p>
+                <p class="text-xl">'dddd'</p>
+            </div>
+        </div>
+        <div class="flex mt-4 border-b border-white/20 pb-8">
+            <div class="border-r border-white/20 pr-8">
+                <p class="text-slate-400 text-xs"></p>
+                <div class="flex justify-center">
+                    <img class="max-h-[50px] md:max-h-[50px]" src="{{ asset('images/follow-icon.png') }}" alt="trailer image">
+                </div>
+            </div>
+            <div class="pl-8">
+                <p class="text-slate-400 text-xs">Category</p>
+                <p class="text-xl">'dduifdifd'</p>
+            </div>
+            <div class="pl-8">
+                <p class="text-slate-400 text-xs">Brand</p>
                 <p class="text-xl">'dddd'</p>
             </div>
         </div>
