--- a/templates/main/_vehicle_card.html.twig
+++ b/templates/main/_vehicle_card.html.twig
@@ -1,4 +1,4 @@
-<div class="bg-[#16202A] rounded-2xl pl-5 py-5 pr-11 flex flex-col min-[1174px]:flex-row min-[1174px]:justify-between">
+<div class="bg-gradient-to-r from-[#00121C] to-[#013954] rounded-2xl pl-5 py-5 pr-11 flex flex-col min-[1174px]:flex-row min-[1174px]:justify-between">
     <div class="flex justify-center min-[1174px]:justify-start">
         <img class="h-[83px] w-[84px]" src="{{ asset(imageSrc) }}">
         <div class="ml-5">
@@ -17,12 +17,7 @@
         </div>
     </div>
     <div class="flex justify-center min-[1174px]:justify-start mt-2 min-[1174px]:mt-0 shrink-0">
-        <div class="border-r border-white/20 pr-8">
-            <p class="text-slate-400 text-xs">Captain</p>
-            <p class="text-xl">{{ captain }}</p>
-        </div>
-
-        <div class="pl-8 w-[100px]">
+        <div class="pl-8 w-[100px] border-l border-white/20">
             <p class="text-slate-400 text-xs">Class</p>
             <p class="text-xl">{{ class }}</p>
         </div>
