--- a/templates/car/list.html.twig
+++ b/templates/car/list.html.twig
@@ -10,12 +10,14 @@
             <h1 class="text-4xl font-semibold text-white">
                 Cars List
             </h1>            
-            <a 
-                href="{{ path('car_create') }}" 
-                class="inline-block bg-amber-400 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-50"
-            >
-                Add New Car
-            </a>
+            {% if is_granted('ROLE_MERCHANT') %}
+                <a 
+                    href="{{ path('car_create') }}" 
+                    class="inline-block bg-amber-400 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-50"
+                >
+                    Add New Car
+                </a>
+            {% endif %}
         </div>
         <div class="space-y-5">
             {% for car in cars %}
