--- a/templates/motorcycle/list.html.twig
+++ b/templates/motorcycle/list.html.twig
@@ -8,13 +8,15 @@
         <div class="flex justify-between items-center mb-8">
             <h1 class="text-4xl font-semibold text-white">
                 Mototrcycle List
-            </h1>            
-            <a 
-                href="{{ path('motorcycle_create') }}" 
-                class="inline-block bg-amber-400 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-50"
-            >
-                Add New Motorcycle
-            </a>
+            </h1>
+            {% if is_granted('ROLE_MERCHANT') %}
+                <a 
+                    href="{{ path('motorcycle_create') }}" 
+                    class="inline-block bg-amber-400 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-50"
+                >
+                    Add New Motorcycle
+                </a>
+            {% endif %}
         </div>
         <div class="space-y-5">
             {% for motorcycle in motorcycles %}
