--- a/templates/motorcycle/list.html.twig
+++ b/templates/motorcycle/list.html.twig
@@ -53,6 +53,19 @@
                             <p class="text-slate-400 text-xs">Quantity</p>
                             <p class="text-xl">{{ motorcycle.quantity }}</p>
                         </div>
+                        {% if is_granted('ROLE_BUYER') %}
+                            <div class="pl-8 w-[100px]">
+                                {% if app.user and app.user.isFollowingMotorcycle(motorcycle) %}
+                                    <img class="max-h-[50px] md:max-h-[50px]" src="{{ asset('images/follow-icon.png') }}" alt="Followed">
+                                {% else %}
+                                    <form action="{{ path('motorcycle_follow', { id: motorcycle.id }) }}" method="post">
+                                        <button type="submit" class="bg-teal-600 text-white py-1 px-3 rounded">
+                                            Follow
+                                        </button>
+                                    </form>
+                                {% endif %}
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             {% endfor %}
