--- a/templates/car/list.html.twig
+++ b/templates/car/list.html.twig
@@ -26,7 +26,7 @@
                         <div class="ml-5">
                             <h4 class="text-[22px] pt-1 font-semibold">
                                 <a
-                                    class="hover:text-slate-200"
+                                    class="hover:bg-fuchsia-600"
                                     href="{{ path('car_details', { id: car.id }) }}"
                                 >
                                     {{ car.brand }} - {{ car.model }}
@@ -54,6 +54,19 @@
                             <p class="text-slate-400 text-xs">Quantity</p>
                             <p class="text-xl">{{ car.quantity }}</p>
                         </div>
+                        {% if is_granted('ROLE_BUYER') %}
+                            <div class="pl-8 w-[100px]">
+                                {% if app.user and app.user.isFollowingCar(car) %}
+                                    <img class="max-h-[50px] md:max-h-[50px]" src="{{ asset('images/follow-icon.png') }}" alt="Followed">
+                                {% else %}
+                                    <form action="{{ path('car_follow', { id: car.id }) }}" method="post">
+                                        <button type="submit" class="bg-teal-600 text-white py-1 px-3 rounded">
+                                            Follow
+                                        </button>
+                                    </form>
+                                {% endif %}
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             {% endfor %}
