--- a/templates/main/_vehicle_card.html.twig
+++ b/templates/main/_vehicle_card.html.twig
@@ -8,7 +8,7 @@
             </div>
             <h4 class="text-[22px] pt-1 font-semibold">
                 <a
-                    class="hover:text-slate-200"
+                    class="hover:bg-amber-400"
                     href="{{ path(categoryPath) }}"
                 >
                     View All {{ category }}
