--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,6 +24,9 @@
                 <button class="bg-amber-400 hover:bg-amber-500 text-white font-semibold py-2 px-6 rounded-lg transition duration-200">
                     Sign in
                 </button>
+                <a href="{{ path('app_register') }}" class="hover:bg-rose-400 text-white font-semibold py-2 px-6 rounded-lg transition duration-200">
+                    Sign up
+                </a>
             </div>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         </form>
