--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -29,6 +29,15 @@
             </div>
 
             <div>
+                <label for="registrationForm_email" class="block text-slate-300 mb-2">Email</label>
+                {{ form_widget(registrationForm.email, {
+                    'attr': {
+                        'class': 'w-full rounded-lg bg-[#2A3B47] text-white py-2 px-4 focus:ring-2 focus:ring-amber-400 focus:outline-none'
+                    }
+                }) }}
+            </div>
+
+            <div>
                 <label for="registrationForm_plainPassword_first" class="block text-slate-300 mb-2">Password</label>
                 {{ form_widget(registrationForm.plainPassword.first, {
                     'attr': {
