--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,12 @@
                 <label for="inputPassword" class="block text-slate-300 mb-2">Password</label>
                 <input type="password" name="password" id="inputPassword" class="w-full rounded-lg bg-[#2A3B47] text-white py-2 px-4 focus:ring-2 focus:ring-amber-400 focus:outline-none" required>
             </div>
-            <div class="flex justify-end">
+            <div>
+                <a href="{{ path('app_forgot_password_request') }}">
+                   <p class="text-slate-500 hover:text-blue-600"> Forgot Password ? </p>             
+                </a>
+            </div>
+            <div class="flex">
                 <button class="bg-amber-400 hover:bg-amber-500 text-white font-semibold py-2 px-6 rounded-lg transition duration-200">
                     Sign in
                 </button>
