--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -14,28 +14,28 @@
                     imageSrc: 'images/car.png',
                     category: 'Cars',
                     categoryPath: 'car_list',
-                    class: 'Garden Cars'
+                    class: 'Cars'
                 }) }}
 
                 {{ include('main/_vehicle_card.html.twig', {
                     imageSrc: 'images/motorcycle.png',
                     category: 'Motorcycles',
                     categoryPath: 'motorcycle_list',
-                    class: 'Garden Motorcycle'
+                    class: 'Motorcycles'
                 }) }}
 
                 {{ include('main/_vehicle_card.html.twig', {
                     imageSrc: 'images/truck.png',
                     category: 'Trucks',
                     categoryPath: 'truck_list',
-                    class: 'Garden Truck'
+                    class: 'Truck'
                 }) }}
 
                 {{ include('main/_vehicle_card.html.twig', {
                     imageSrc: 'images/trailer.png',
                     category: 'Trailers',
                     categoryPath: 'trailer_list',
-                    class: 'Garden Trailers'
+                    class: 'Trailers'
                 }) }}
             </div>
         </div>
