--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,16 +18,16 @@
                         <img class="h-[42px]" src="{{ asset('images/carshop-logo.png') }}" alt="carshop logo">
                     </a>
                     <nav class="flex space-x-4 font-semibold">
-                        <a class="hover:text-amber-400 pt-2" href="/cars">
+                        <a class="hover:text-amber-400 pt-2" href="{{ path('car_list') }}">
                             Cars
                         </a>
-                        <a class="hover:text-amber-400 pt-2" href="/motorcycles">
+                        <a class="hover:text-amber-400 pt-2" href="{{ path('motorcycle_list') }}">
                             Motorcycles
                         </a>
-                        <a class="hover:text-amber-400 pt-2" href="/trucks">
+                        <a class="hover:text-amber-400 pt-2" href="{{ path('truck_list') }}">
                             Trucks
                         </a>
-                        <a class="hover:text-amber-400 pt-2" href="/trailers">
+                        <a class="hover:text-amber-400 pt-2" href="{{ path('trailer_list') }}">
                             Trailers
                         </a>
 
