--- a/templates/main/_vehicle_card.html.twig
+++ b/templates/main/_vehicle_card.html.twig
@@ -18,7 +18,7 @@
     </div>
     <div class="flex justify-center min-[1174px]:justify-start mt-2 min-[1174px]:mt-0 shrink-0">
         <div class="pl-8 w-[100px] border-l border-white/20">
-            <p class="text-slate-400 text-xs">Class</p>
+            <p class="text-slate-400 text-xs">Category</p>
             <p class="text-xl">{{ class }}</p>
         </div>
     </div>
