created base vehicle controlller to avoid repetition

--- a/templates/car/list.html.twig
+++ b/templates/car/list.html.twig
@@ -20,7 +20,7 @@
             {% endif %}
         </div>
         <div class="space-y-5">
-            {% for car in cars %}
+            {% for car in vehicles %}
                 <div class="bg-[#16202A] rounded-2xl pl-5 py-5 pr-11 flex flex-col min-[1174px]:flex-row min-[1174px]:justify-between">
                     <div class="flex justify-center min-[1174px]:justify-start">
                         <div class="ml-5">
