--- a/templates/car/details.html.twig
+++ b/templates/car/details.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ car.brand }} - {{ car.model }}{% endblock %}
+{% block title %}{{ vehicle.brand }} - {{ vehicle.model }}{% endblock %}
 
 {% block body %}
 <div class="my-4 px-8">
@@ -19,20 +19,20 @@
         <div class="mt-8 max-w-xl mx-auto">
             <div class="px-8 pt-8">
                 <h1 class="text-[32px] font-semibold border-b border-white/10 pb-5 mb-5">
-                    {{ car.brand }} - {{ car.model }}
+                    {{ vehicle.brand }} - {{ vehicle.model }}
                 </h1>
 
                 <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Engine Capacity</h4>
-                <p class="text-[22px] font-semibold">{{ car.engineCapacity }} L</p>
+                <p class="text-[22px] font-semibold">{{ vehicle.engineCapacity }} L</p>
 
                 <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Colour</h4>
-                <p class="text-[22px] font-semibold">{{ car.colour }}</p>
+                <p class="text-[22px] font-semibold">{{ vehicle.colour }}</p>
 
                 <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Price</h4>
-                <p class="text-[22px] font-semibold">${{ car.price }}</p>
+                <p class="text-[22px] font-semibold">${{ vehicle.price }}</p>
 
                 <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Quantity</h4>
-                <p class="text-[22px] font-semibold">{{ car.quantity }}</p>
+                <p class="text-[22px] font-semibold">{{ vehicle.quantity }}</p>
             </div>
         </div>
     </div>
