--- a/templates/motorcycle/list.html.twig
+++ b/templates/motorcycle/list.html.twig
@@ -19,7 +19,7 @@
             {% endif %}
         </div>
         <div class="space-y-5">
-            {% for motorcycle in motorcycles %}
+            {% for motorcycle in vehicles %}
                 <div class="bg-[#16202A] rounded-2xl pl-5 py-5 pr-11 flex flex-col min-[1174px]:flex-row min-[1174px]:justify-between">
                     <div class="flex justify-center min-[1174px]:justify-start">
                         <div class="ml-5">
