--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,11 @@
                         <a class="hover:text-amber-400 pt-2" href="{{ path('trailer_list') }}">
                             Trailers
                         </a>
-
+                        {% if is_granted('ROLE_BUYER') %}
+                            <a class="hover:text-amber-400 pt-2" href="{{ path('followed_list') }}">
+                                Followed
+                            </a>
+                        {% endif %}
                         {% if app.user %}
                             <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="{{ path('app_logout') }}">
                                 Logout
