--- a/templates/vehicle/details.html.twig
+++ b/templates/vehicle/details.html.twig
@@ -14,7 +14,7 @@
 
 <div class="md:flex justify-center space-x-3 mt-5 px-4 lg:px-8">
     <div class="flex justify-center">
-        <img class="max-h-[300px] md:max-h-[500px]" src="{{ asset('images/' ~ vehicleType ~ '.png') }}" alt="{{ vehicleType }} image">
+        <img class="h-[483px] w-[484px]" src="{{ asset('images/' ~ vehicleType ~ '.png') }}" alt="{{ vehicleType }} image">
     </div>
     
     <div class="space-y-5">
